# SimulacionFisicaVideojuegos

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CITATION.cff  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  game.sln  game.vcxproj  game.vcxproj.filters
skeleton/: CMakeLists.txt  RenderUtils.cpp  RenderUtils.hpp  game.vcxproj  game.vcxproj.filters  main.cpp
skeleton/gameplay/: cookable.cpp  cookable.hpp  game_scene.cpp  game_scene.hpp  pan.cpp  pan.hpp
skeleton/generators/: explosion_generator.cpp  explosion_generator.hpp  gravity_generator.cpp  gravity_generator.hpp  wind_generator.cpp  wind_generator.hpp
skeleton/generators/spring/: buoyancy_generator.cpp  buoyancy_generator.hpp  spring_force_generator.cpp  spring_force_generator.hpp
skeleton/objects/: mass_particle.cpp  mass_particle.hpp  particle.cpp  particle.hpp  projectile.cpp  projectile.hpp  solid_particle.cpp  solid_particle.hpp
skeleton/objects/misc_rigidbody/: rigidbody.hpp
skeleton/systems/: force_composer.hpp  particle_generator.cpp  particle_generator.hpp  particle_storage.cpp  particle_storage.hpp  particle_system.cpp  particle_system.hpp
skeleton/types/: particle_defs.hpp  v3_f32.cpp  v3_f32.hpp
